Created a controller for default/root landing page, also created the associated view file for it

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,7 +10,7 @@
     <%= javascript_importmap_tags %>
   </head>
 
-  <body style="background-color: black;">
+  <body style="background-color: white; min-height: 100vh; min-width: 100vw;">
     <%= yield %>
   </body>
 </html>
