Implemented authentication using devise gem, modified schema of the User model to accomodate devise gem

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,8 @@
   </head>
 
   <body style="background-color: white; min-height: 100vh; min-width: 100vw;">
+    <p class="notice"><%= notice %></p> 
+    <p class="alert"><%= alert %></p> 
     <%= yield %>
   </body>
 </html>
