Streamlined the user generation process through devise customization

--- a/app/views/layouts/users.html.erb
+++ b/app/views/layouts/users.html.erb
@@ -10,7 +10,7 @@
     <%= javascript_importmap_tags %>
   </head>
 
-  <body style="background-color: black; color:white; min-height: 100vh; min-width: 100vw;">
+  <body style="background-color: red; min-height: 100vh; min-width: 100vw;">
 
     <%= yield %>
   </body>
