--- a/app/views/layouts/twitter_landing_page.html.erb
+++ b/app/views/layouts/twitter_landing_page.html.erb
@@ -10,8 +10,9 @@
     <%= javascript_importmap_tags %>
   </head>
 
-  <body style="background-color: black; color:white; min-height: 100vh; min-width: 100vw;">
-
+  <body style="background-color: white; min-height: 100vh; min-width: 100vw;">
+    <p class="notice"><%= notice %></p> 
+    <p class="alert"><%= alert %></p> 
     <%= yield %>
   </body>
 </html>
