Created models, views and controllers for like, reply and post

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -15,7 +15,12 @@
  */
 
  @import "font-awesome";
+ @import "bootstrap";
 
+ @import "bootstrap-sprockets";
+ @import "bootstrap";
+
+ 
  *{
     margin: 0;
     padding: 0;
