--- a/app/views/twitter_landing_page/index.html.erb
+++ b/app/views/twitter_landing_page/index.html.erb
@@ -1,6 +1,5 @@
 <% if user_signed_in? %> 
- <div> Welcome <%= current_user.email %> </div> 
-  <%= button_to "Sign out", destroy_user_session_path, method: :delete %> 
+  redirect_to :controller => 'home', :action => 'index'
 <% else %>
   <%= button_to "Sign in", new_user_session_path %> 
 <% end %>
