--- a/app/views/replies/_reply_form.html.erb
+++ b/app/views/replies/_reply_form.html.erb
@@ -1,4 +1,5 @@
-<%= form_with(model: reply) do |form| %>
+
+<%= form_with model: [ @post, @post.replies.build ] do |form| %>
     <% if reply.errors.any? %>
      <div id="error_explanation">
       <h2><%= pluralize(reply.errors.count, "error") %> prohibited this reply from being saved: 
