--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -29,7 +29,7 @@
 #side-menu{
    width: 10vw;
    background-color: white;
-   min-height: 100vh;
+   min-height: 120vh;
    height: auto;
    display: flex;
    flex-direction: column;
@@ -37,21 +37,32 @@
    align-items: center;
    border-right: 2px solid rgb(239, 243, 244);
 }
-#side-menu > div{
-   width: 3rem;
-   height: 3rem;
-   border-radius: 50%;
-
-}
-#side-menu > div > div{
-   width: 100%;
-   height: 100%;
+#side-menu>div{
+   display: flex;
+   justify-content: center;
+   align-items: center;
+   margin: 0.2rem;
+   width: 4rem;
+   height: 4rem;
    border-radius: 50%;
 }
-
-#side-menu > div > div:hover{
-   background-color: rgb(241, 241, 241,);
+#side-menu>div:hover{
+   background-color: rgb(250, 221, 221);
 }
+#side-menu>div>a{
+   text-decoration: none;
+}
+#side-menu>div>a>div{
+   display: flex;
+   justify-content: center;
+   align-items: center;
+   width: 4rem;
+   height: 4rem;
+   border-radius: 50%;
+}
+
+
+
 
   /* HOME PAGE CSS ========================================================================= */
 
@@ -81,20 +92,20 @@
   }
   #home-inner21{
    height: 3.25rem;
-   width:48rem;
+   width:100%;
    border-bottom: 1px solid rgb(239, 243, 244);
    display: flex;
    justify-content: space-evenly;
 
   }
   #home-inner211{
-   width: 22.3rem;
+   width: 45%;
   }
   #home-inner212{
-   width: 22.3rem;
+   width: 45%;
   }
   #home-inner213{
-   width: 3.25rem;
+   width: 10%;
    display: flex;
    justify-content: center;
    align-items: center;
@@ -111,4 +122,111 @@
   #home-inner211:hover, #home-inner212:hover, #home-inner213:hover{
    background-color: rgb(239, 243, 244);
   }
+  #home-inner-22{
+   height: 10rem;
+   width:100%;
+   border-bottom: 1px solid rgb(239, 243, 244);
+   display: flex;
+   justify-content: space-evenly;
+  }
+  #home-inner-22 form{
+   width: 100%;
+
+  }
+  #home-inner22{
+   height: 100%;
+   width: 100%;
+   display: flex;
+   justify-content: space-evenly;
+  }
+  #home-inner221{
+   display: flex;
+   flex-direction: column;
+   justify-content: flex-start;
+   align-items: center;
+   width: 10%;
+   min-height: 10rem;
+  }
+  #home-inner221>div{
+   height:2.5rem; 
+   width:2.5rem; 
+   border-radius:50%; 
+   background-color:rgb(0,151,167); 
+   display:flex; 
+   justify-content:center; 
+   align-items:center; 
+   margin-top:0.5rem;
+  }
+  #home-inner222{
+   width: 90%;
+   height: 100%;
+  }
+  #home-inner2221{
+   width: 100%;
+   height: 4rem;
+  }
+  #home-inner2222{
+   width: 100%;
+   height: 3rem;
+   border-bottom: 1px solid rgb(239, 243, 244);
+   display: flex;
+
+  }
+  #home-inner2223{
+   width: 100%;
+   height: 3rem;
+   display: flex;
+
+  }
+  #post-btn-wrapper{
+   width:60%; 
+   height:3rem; 
+   display:flex; 
+   justify-content:flex-end; 
+   align-items:center;
+  }
+  #post-btn-wrapper button{
+   width: 5rem;
+   margin-right:1rem; 
+   text-decoration: none;
+   border: none;
+  }
+  #post-btn-wrapper button div:hover{
+   background-color: #0070bb;
+  }
+
+  #post-btn{
+   height:2rem; 
+   width:5rem; 
+   margin-right:1rem; 
+   background-color: #1d9bf0; 
+   color:white; 
+   display:flex; 
+   justify-content:center; 
+   align-items:center; 
+   border-radius:1rem;
+  }
+
+  input {
+   border: 2px solid currentcolor;
+ }
+ input:invalid {
+   border: 2px dashed red;
+ }
+ input:invalid:focus {
+   background-image: linear-gradient(pink, lightgreen);
+ }
+ #postTextarea {
+   width: 100%;
+   height: auto;
+   padding: 10px;
+   font-size: 1.4rem;
+   border: none;
+ }
+ #home-inner23{
+   width:100%;
+   min-height: 100vh;
+   margin-top: 5rem;
+ }
+
 
