--- a/app/views/shared/_side_menu.html.erb
+++ b/app/views/shared/_side_menu.html.erb
@@ -19,7 +19,7 @@
         
         
     <div id="explore-btn-wrapper">
-        <%= link_to explore_index_path do %>
+        <%= link_to search_explore_index_path do %>
             <div id="explore-btn">
                 <i class="fa-solid fa-magnifying-glass fa-2x" title="Explore" style="color: #0f1419;"></i>
             </div>
