--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,14 +1,22 @@
 
 <%= link_to 'Edit', edit_post_path(@post) %> 
 <br>
-<%= link_to 'Destroy', @post, method: :delete, data: { confirm: 'Are you sure?' } %>
+<%= button_to 'Destroy', post_path(@post), method: :delete, data: { confirm: 'Are you sure?' } %>
 <br>
-<%= link_to 'Back', posts_path %>
+<%= link_to 'Back', home_index_path %>
 <br>
 <h2>Post</h2>
 <%= @post.post_body %>
 <br>
 <h3>Replies</h3>
-<%= @post.replies %>
+    <% @replies.each do |reply|%>
+        <p> <%= User.find(reply.user_id).username %> <%= reply.reply_body %></p>
+        <br>
+    <% end %>
 <br>
-<%= render "replies/reply_form", reply: @reply%>
+<br>
+<br>
+
+<div id="reply-form">
+    <%= render "replies/form" %>
+</div>
