Improved the styling of the home page

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -70,13 +70,16 @@
 
     </div>
     <div id="home-inner3">
-        <div id="home-inner31"></div>
-        <div id="home-inner32">
-            <h2><b>Subscribe to Premium</b></h2>
-        </div>
-        <div id="home-inner33"></div>
-        <div id="home-inner34"></div>
-        <div id="home-inner35"></div>
+    <div id="home-inner31">
+        <div><i class="fa-solid fa-magnifying-glass fa-lg" style="color: #575b60;"></i></div>
+        <input type="search" placeholder="Search">
     </div>
+    <div id="home-inner32">
+        <h2><b>Subscribe to Premium</b></h2>
+    </div>
+    <div id="home-inner33"></div>
+    <div id="home-inner34"></div>
+    <div id="home-inner35"></div>
+</div>
 
 </div>
