--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -48,6 +48,7 @@
 }
 #side-menu>div:hover{
    background-color: rgb(250, 221, 221);
+   background-color: rgb(239,243,244);
 }
 #side-menu>div>a{
    text-decoration: none;
@@ -89,6 +90,9 @@
    min-height: 100vh;
    width: 30vw;
    border-right: 2px solid rgb(239, 243, 244);
+   display: flex;
+   flex-direction: column;
+   align-items: center;
   }
   #home-inner21{
    height: 3.25rem;
@@ -96,7 +100,9 @@
    border-bottom: 1px solid rgb(239, 243, 244);
    display: flex;
    justify-content: space-evenly;
-
+   position: sticky;
+   top: 0;
+   background-color: white;
   }
   #home-inner211{
    width: 45%;
@@ -123,7 +129,7 @@
    background-color: rgb(239, 243, 244);
   }
   #home-inner-22{
-   height: 10rem;
+   height: 12rem;
    width:100%;
    border-bottom: 1px solid rgb(239, 243, 244);
    display: flex;
@@ -145,7 +151,7 @@
    justify-content: flex-start;
    align-items: center;
    width: 10%;
-   min-height: 10rem;
+   min-height: 12rem;
   }
   #home-inner221>div{
    height:2.5rem; 
@@ -163,18 +169,22 @@
   }
   #home-inner2221{
    width: 100%;
-   height: 4rem;
+   height: 5rem;
+  }
+  #home-inner2221>textarea:focus{
+    border: none;
+    outline: none;
   }
   #home-inner2222{
    width: 100%;
-   height: 3rem;
+   height: 3.75rem;
    border-bottom: 1px solid rgb(239, 243, 244);
    display: flex;
 
   }
   #home-inner2223{
    width: 100%;
-   height: 3rem;
+   height: 3.75rem;
    display: flex;
 
   }
@@ -322,3 +332,50 @@
    height: 2.5rem;
    width: 5rem;
 }
+
+#post-block24>div{
+  height: 2.5rem;
+  width: 5rem;
+}
+
+#home-inner31{
+ height: 3.5rem;
+ width: 90%;
+ display: flex;
+ flex-direction: row;
+ justify-content: flex-start;
+ align-items: center;
+ border-radius: 3rem;
+ background-color: rgb(239,243,244);
+ position: sticky;
+ top: 0;
+
+}
+#home-inner31>div{
+ height: 3.25rem;
+ width: 10%;
+ display: flex;
+ justify-content: center;
+ align-items: center;
+ border-radius: 3rem;
+ margin-left: 1rem;
+
+}
+#home-inner31>input{
+ height: 3.25rem;
+ width: 70%;
+ padding: 0.5rem;
+ font-size: large;
+ border:none;
+ background-color:rgb(239,243,244);
+ border-radius: 3rem;
+ margin-left: 1rem;
+
+}
+
+#home-inner31>input:focus{
+ outline: none;
+ border: none;
+}
+
+
