--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,7 +14,7 @@
   
   </head>
 
-  <body style="background-color: black; color:white; min-height: 100vh; min-width: 100vw;">
+  <body style="background-color: cyan; color:white; min-height: 100vh; min-width: 100vw;">
 
     <%= yield %>
 
