--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,22 +1,25 @@
 
-<%= link_to 'Edit', edit_post_path(@post) %> 
-<br>
-<%= button_to 'Destroy', post_path(@post), method: :delete, data: { confirm: 'Are you sure?' } %>
-<br>
-<%= link_to 'Back', home_index_path %>
-<br>
-<h2>Post</h2>
-<%= @post.post_body %>
-<br>
-<h3>Replies</h3>
-    <% @replies.each do |reply|%>
-        <p> <%= User.find(reply.user_id).username %> <%= reply.reply_body %></p>
-        <br>
-    <% end %>
-<br>
-<br>
-<br>
+# <%= link_to 'Edit', edit_post_path(@post) %> 
+# <br>
+# <%= button_to 'Destroy', post_path(@post), method: :delete, data: { confirm: 'Are you sure?' } %>
+# <br>
+# <%= link_to 'Back', home_index_path %>
+# <br>
+# <h2>Post</h2>
+# <%= @post.post_body %>
+# <br>
+# <h3>Replies</h3>
+#     <% @replies.each do |reply|%>
+#         <p> <%= User.find(reply.user_id).username %> <%= reply.reply_body %></p>
+#         <br>
+#     <% end %>
+# <br>
+# <br>
+# <br>
 
-<div id="reply-form">
-    <%= render "replies/form" %>
-</div>
+# <div id="reply-form">
+#     <%= render "replies/form" %>
+# </div>
+
+
+
